--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ services:
 
 # create test database
 before_install:
+  - .travis/goget.sh
   - mysql -e 'CREATE DATABASE IF NOT EXISTS sqlxtest;'
   - psql -c 'create database sqlxtest;' -U postgres
-  - go get github.com/mattn/goveralls
   - export SQLX_MYSQL_DSN="travis:@/sqlxtest?parseTime=true"
   - export SQLX_POSTGRES_DSN="postgres://postgres:@localhost/sqlxtest?sslmode=disable"
   - export SQLX_SQLITE_DSN="$HOME/sqlxtest.db"
